@@ -1,6 +1,7 @@
 -*-change-log-*-
 
 0.4.0.0 Ross Paterson <ross@soi.city.ac.uk> Apr 2014
+	* Added modify', a strict version of modify, to the state monads
 	* Added ExceptT and deprecated ErrorT
 	* Added infixr 9 `Compose` to match (.)
 	* Added Eq, Ord, Read and Show instances where possible
